dfir_rs/tests/compile-fail-stable/surface_forwardref_self2_indirect.rs
../compile-fail/surface_forwardref_self2_indirect.rs